Z-index bug in home page fixed

--- a/nextcampuscanvas/src/components/GeneralUseComponents/ButtonUp/ButtonUp.module.scss
+++ b/nextcampuscanvas/src/components/GeneralUseComponents/ButtonUp/ButtonUp.module.scss
@@ -8,7 +8,7 @@
   position: fixed;
   right: 150px;
   bottom: 30px;
-  z-index: 500;
+  z-index: 10;
   display: none;
 }
 .is-active {
