--- a/nextcampuscanvas/src/components/GeneralUseComponents/Header/Header.module.scss
+++ b/nextcampuscanvas/src/components/GeneralUseComponents/Header/Header.module.scss
@@ -269,7 +269,7 @@
   flex-direction: column;
   top: 12px;
   right: 12px;
-  z-index: 10;
+  z-index: 100;
 }
 
 .icon__line {
@@ -392,7 +392,7 @@
       .userMenuStickyState767 {
         position: fixed;
         background-color: $color--white;
-        z-index: 2;
+        z-index: 80;
         padding-top: 10px;
         box-shadow: 0 4px 6px 0 #20212447;
       }
@@ -414,7 +414,7 @@
     -webkit-backdrop-filter: blur(4px);
     border: 1px solid rgba(255, 255, 255, 0.18);
 
-    z-index: 2;
+    z-index: 80;
     top: 0;
     bottom: 0;
     left: -100vw;
